# asitencia_rest_api

./: build.sh  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
apps/asistencia/: admin.py  models.py  serializers.py  urls.py  views.py
apps/asistencia/migrations/: 0001_initial.py  0002_initial.py
apps/usuarios/: models.py  serializers.py  urls.py  views.py
apps/usuarios/migrations/: 0001_initial.py  0002_alter_usuario_rol.py  0003_rename_fecha_creacion_usuario_date_joined_and_more.py
apps/usuarios/tests/: test_models.py  test_views.py
asistencia_crud/: asgi.py  settings.py  urls.py  wsgi.py
